--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images//N.png" alt="Card image" >
+                        <img class="card-img-top" src="images/awslogo-image.jpg" alt="Card image" >
                         <div class="card-body">
                             <h4 class="card-title">Highly Available Infrastructure</h4>
                             <hr class="line">
@@ -301,7 +301,7 @@
                 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/schoolImage.jpg" alt="Card image" >
+                        <img class="card-img-top" src="images/images.png" alt="Card image" >
                         <div class="card-body">
                             <h4 class="card-title">My Portfolio Odyssey</h4>
                             <hr class="line">
